fix: Table desgin on small screens

--- a/src/styles/my_courses.css
+++ b/src/styles/my_courses.css
@@ -3,7 +3,8 @@ main>.container {
 }
 
 .table-container {
-    padding: var(--spacing5) 0;
+    padding: var(--spacing5) var(--spacing2);
+    overflow-x: auto;
 }
 
 .circle {
